Fix close button contrast in some dark themes

--- a/style/themes/default-dark.css
+++ b/style/themes/default-dark.css
@@ -630,7 +630,12 @@ input[type="password"]::-webkit-caps-lock-indicator {
 }
 
 .close {
-  color: #383838;
+  color: #fff;
+  text-shadow: 0 1px 0 #000;
+}
+.close:focus,
+.close:hover {
+  color: #fff;
 }
 
 .login-page {
