--- a/style/themes/high-contrast-dark.css
+++ b/style/themes/high-contrast-dark.css
@@ -823,7 +823,14 @@ input[type="password"]::-webkit-caps-lock-indicator {
 }
 
 .close {
-  color: #383838;
+  color: #fff;
+  text-shadow: 0 1px 0 #000;
+  opacity: 0.4;
+}
+.close:focus,
+.close:hover {
+  color: #fff;
+  opacity: 0.8;
 }
 
 .login-page {
